--- a/index.html
+++ b/index.html
@@ -1,25 +1,88 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PokeMania</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
 
 </head>
+<!--page layout: simple for mobile use, idea have page 1 for pokedex search, page 2 (after page 1 is working) combat-->
+<!--add search and random button-->
+<!--Need some help with the mobile responsivness, just wanted to get something to start with-->
+
 <body>
-        <!--jQuery/Ajax-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!--Firebase-->
-        <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
-        <!--Bootstrap/jQuery-->
-        <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <!--PokeApp-->
-        <script src="js/app.js"></script>
+    <!--jumbotron for pokemon title page to begin with-->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="jumbotron jumbotron-fluid"></div>
+            </div>
+        </div>
+    </div>
+    <!--am I doing this right? Instructions go here-->
+    <div id="instructions">
+        <p>Pikachu ipsum dolor sit amet tentacruel officia ad, clefable aliquip gyrados aliquip kakuna ekans oddish
+            velit lapras seadra onix proident.<br>
+            Aliquip omastar oddish exercitation adipisicing, deserunt labore qui commodo. Voluptate ut et aliqua
+            nidoking, ivysaur pikachu pidgeot omanyte aute et.<br>
+            Cupidatat excepteur wigglytuff culpa quis cillum aute nisi do charmeleon. Commodo aute golem aliquip nulla
+            butterfree. Proident commodo wigglytuff voluptate,<br>
+            quis est vileplume lapras clefairy tentacool staryu hitmonchan. Sed consequat oddish, magikarp ut scyther
+            tauros kabuto.</p>
+    </div>
+
+
+
+    <!-- pretty cool looking search button found here: https://www.mockplus.com/blog/post/search-bar-design -->
+    <div class="container">
+        <div class="row">
+            <div id="cover">
+                <form method="get" action="">
+                    <div class="tb">
+                        <div class="td"><input type="text" placeholder="Pokedéx" required></div>
+                        <div class="td" id="s-cover">
+                            <button type="submit">
+                                <div id="s-circle"></div>
+                                <span></span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    
+    <button type="button" class="btn btn-danger">Random</button>
+
+
+    <!--add sticky footer with "Team 4 Master Trainers"-->
+    <footer>Team 4 Master Trainers</footer>
+
+
+
+
+
+    <!--jQuery/Ajax-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+    <!--Bootstrap/jQuery-->
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <!--PokeApp-->
+    <script src="js/app.js"></script>
 </body>
+
 </html>
