--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
     </div>
     <!--am I doing this right? Instructions go here-->
     <div id="instructions">
-        <p>Pikachu ipsum dolor sit amet tentacruel officia ad, clefable aliquip gyrados aliquip kakuna ekans oddish
-            velit lapras seadra onix proident.<br>
-            Aliquip omastar oddish exercitation adipisicing, deserunt labore qui commodo. Voluptate ut et aliqua
-            nidoking, ivysaur pikachu pidgeot omanyte aute et.<br>
-            Cupidatat excepteur wigglytuff culpa quis cillum aute nisi do charmeleon. Commodo aute golem aliquip nulla
-            butterfree. Proident commodo wigglytuff voluptate,<br>
-            quis est vileplume lapras clefairy tentacool staryu hitmonchan. Sed consequat oddish, magikarp ut scyther
-            tauros kabuto.</p>
+        <p>Find your favorite pokemon!</p>
     </div>
 
 
@@ -59,7 +52,9 @@
     </div>
 
     
-    <button type="button" class="btn btn-danger">Random</button>
+    <button type="button" class="btn btn-danger" id="random-button">Random</button>
+
+
 
 
     <!--add sticky footer with "Team 4 Master Trainers"-->
