--- a/index2.html
+++ b/index2.html
@@ -14,15 +14,23 @@
 <body>
     
     <div class="result">
-        <div class="row">
-            <div class="col">
-                Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! Pokemon Picture goes here! 
-            </div>
-        </div>
     </div>
 
 
 
-
+    <!--jQuery/Ajax-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--Firebase, uncomment when ready to apply-->
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>-->
+    <!--Bootstrap/jQuery may be causing CSS issues-->
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script> -->
+    <!--PokeApp-->
+    <script src="js/app.js"></script>
 </body>
 </html>
