--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <!--am I doing this right? Instructions go here-->
     <div id="instructions">
-        <p>Find your favorite pokemon!</p>
+        <p>Gotta Catch 'em' all!</p>
     </div>
 
 
