--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,10 @@
     <div class="result">
     </div>
 
+    <div class="result-name">
+        
+    </div>
+
 
 
     <!--jQuery/Ajax-->
@@ -29,7 +33,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
     <!--PokeApp-->
     <script src="js/app.js"></script>
 </body>
