--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PokeMania</title>
+    <title>PokeDex</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -12,13 +12,14 @@
 
 </head>
 <body>
-    
+
+    <div class="result-name">
+    </div>
+
     <div class="result">
     </div>
 
-    <div class="result-name">
-        
-    </div>
+
 
 
 
