small edit on search bar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="cover">
                 <form method="get" action="">
                     <div class="tb">
-                        <div class="td"><input type="text" placeholder="Search your Pokemon" required></div>
+                        <div class="td"><input type="text" placeholder="Search Pokemon" required></div>
                         <div class="td" id="s-cover">
                             <button type="submit">
                                 <div id="s-circle"></div>
