added audio player in the footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    
+ 
 
 </head>
 <!--page layout: simple for mobile use, idea have page 1 for pokedex search, page 2 (after page 1 is working) combat-->
@@ -17,6 +19,7 @@
 <!--Need some help with the mobile responsivness, just wanted to get something to start with-->
 
 <body>
+
     <!--jumbotron for pokemon title page to begin with-->
     <div class="container">
         <div class="row">
@@ -47,14 +50,18 @@
         </div>
     </div>
 
-    
     <button type="button" class="btn btn-danger" id="random-button">Random</button>
 
-
-
-
     <!--add sticky footer with "Team 4 Master Trainers"-->
-    <footer>Team 4 Master Trainers</footer>
+    <footer>
+            <div id="audio">
+                    <audio controls>
+                            <source src="https://ia601207.us.archive.org/25/items/PokemonThemeSong/Pok%C3%A9mon%20Theme%20Song.mp3"/>
+                    </audio>  
+                    </div>
+    </footer>
+
+   
 
 
 
