--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    <!--New technology from D3-->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+
     
  
 
@@ -82,6 +85,7 @@
         crossorigin="anonymous"></script>
     <!--PokeApp-->
     <script src="js/app.js"></script>
+    <script src="js/filter.js"></script>
 </body>
 
 </html>
