--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style2.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style2.css">
+        <!--New technology from D3-->
+        <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
 <body>
@@ -19,6 +21,8 @@
     <div class="result">
     </div>
 
+    <div class="chart">
+    </div>
 
 
 
@@ -37,5 +41,6 @@
         crossorigin="anonymous"></script>
     <!--PokeApp-->
     <script src="js/app.js"></script>
+    <script src="js/filter.js"></script>
 </body>
 </html>
