upper/lower case conversions, working on linking both scripts to each others' variables, more pseudo-code

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!--ALERT: Temp div to playtest appending of pokemon, will be removed later!!-->
-    <div id="testDiv" class="result-name result">
+    <div id="testDiv" class="result-name result chart">
 
     </div>
     <!--RANDOM BUTTON-->
@@ -69,12 +69,6 @@
                     </audio>  
                     </div>
     </footer>
-
-
-
-
-
-
 
     <!--jQuery/Ajax-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
