--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,13 @@
 
 </head>
 <body>
-
+    <!--Appends Pokemon name-->
     <div class="result-name">
     </div>
-
+    <!--Appends Pokemon sprite-->
     <div class="result">
     </div>
-
+    <!--Appends the graph/stats-->
     <div class="chart">
     </div>
 
