Code clean-up, added for loop to isolate pokemon_names

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="cover">
                 <form method="get" action="">
                     <div class="tb">
-                        <div class="td"><input id="add-pokemon" type="text" placeholder="Search Pokemon" required></div>
+                        <div class="td"><input id="add-pokemon" class="autocomplete" type="text" placeholder="Search Pokemon" required></div>
                         <div class="td" id="s-cover">
                             <button id="pokemon-input" type="submit">
                                 <div id="s-circle"></div>
@@ -72,6 +72,8 @@
 
     <!--jQuery/Ajax-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--jQuery UI-->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--Firebase-->
     <!-- <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script> -->
     <!--Bootstrap/jQuery-->
