--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
-<body>
+<body class="body2">
     <!--Appends Pokemon name-->
     <div class="result-name">
     </div>
