--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="cover">
                 <form method="get" action="">
                     <div class="tb">
-                        <div class="td"><input id="add-pokemon" class="autocomplete" type="text" placeholder="Choose Your Pokemon!" required></div>
+                        <div class="td"><input id="add-pokemon" class="autocomplete" type="text" style="font-family: 'Press Start 2P', cursive;" placeholder="Choose Your Pokemon!" required></div>
                         <div class="td" id="s-cover">
                             <button id="pokemon-input" type="submit">
                                 <div id="s-circle"></div>
