fixed fonts, stopped touching shit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style2.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <!--New technology from D3-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
@@ -43,7 +44,7 @@
             <div id="cover">
                 <form method="get" action="">
                     <div class="tb">
-                        <div class="td"><input id="add-pokemon" class="autocomplete" type="text" placeholder="Search Pokemon" required></div>
+                        <div class="td"><input id="add-pokemon" class="autocomplete" style="font-family: 'Press Start 2P', cursive;" type="text" placeholder="Choose your Pokemon!" required></div>
                         <div class="td" id="s-cover">
                             <button id="pokemon-input" type="submit">
                                 <div id="s-circle"></div>
