--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div class="jumbotron jumbotron-fluid"></div>
+                <div class="jumbotron vertical-center"></div>
 
             </div>
         </div>
@@ -44,7 +44,7 @@
             <div id="cover">
                 <form method="get" action="">
                     <div class="tb">
-                        <div class="td"><input id="add-pokemon" class="autocomplete" style="font-family: 'Press Start 2P', cursive;" type="text" placeholder="Choose your Pokemon!" required></div>
+                        <div class="td"><input id="add-pokemon"  type="text" placeholder="Choose your Pokémon!" required></div>
                         <div class="td" id="s-cover">
                             <button id="pokemon-input" type="submit">
                                 <div id="s-circle"></div>
@@ -80,11 +80,13 @@
 
     <!--add sticky footer with "Team 4 Master Trainers"-->
     <footer>
+        
             <div id="audio">
                     <audio controls>
                             <source src="https://ia601207.us.archive.org/25/items/PokemonThemeSong/Pok%C3%A9mon%20Theme%20Song.mp3"/>
                     </audio>  
             </div>
+           
     </footer>
 
     <!--jQuery/Ajax-->
