added pokemon flavor text, added <p> to .result-name <div>

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         </div>
         <!--Appends Pokemon name-->
         <div class="result-name">
+            <p id="pokeFlav">
+            </p>
         </div>
 
         <!--Appends Pokemon sprite-->
